# agents

./: .env_template  .gitignore  README.md  pyproject.toml
autogen/project-to-readme-agents/: main.py
flock/01-getting-started/: 01-hello-flock.py  02-inputs-and-outputs.py  03-using-a-tool.py  04-flock-architecture.py
flock/02-core-concepts/: 01-pydantic-types.py  02-declarative-vs-prompting.py  03-simple-chaining.py  04-tools-in-action.py  05-intro-to-modules.py  06-context-basics.py
flock/03-intermediate-guides/: 02-providing-rest-api-ui-chat.py  03-custom-endpoints.py
flock/03-intermediate-guides/to_do/: 01-memory.py  01-memory_internal.py  02-memory-graph.py
semantic-kernel/socal-media-craft-agent/: main.py
