[project]
name = "flock-showcase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flock-core[all-tools]>=0.4.502",
    "ipykernel>=6.29.5",
    "mem0ai>=0.1.97",
    "semantic-kernel==1.20.0",
    "autogen-agentchat>=0.4.7",
    "autogen-ext[azure,openai,web-surfer]>=0.4.7",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.0",
]
